--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click>=8.1.3
-duckduckgo-search>=3.9.9
+duckduckgo-search>=6.1.7
 Flask==2.2.3
 gunicorn==20.1.0
 idna==3.4
@@ -13,4 +13,5 @@ requests>=2.28.2
 urllib3==1.26.15
 Werkzeug==2.2.3
 zipp==3.15.0
+lxml
 flask[async]
